# app/openapi/orders.yaml
@@ -11,96 +11,81 @@ servers:
 paths:
   /:
     post:
-      operationId: orders_controller.add_order
       tags:
         - Orders
+      summary: Creates an order
       requestBody:
         $ref: '#/components/requestBodies/CreateOrder'
       responses:
-        201:
+        200:
           description: Returns the new order
           content:
             application/json:
               schema:
-                allOf:
-                  - $ref: '#/components/schemas/OrderProperties'
-                  - $ref: '#/components/schemas/OrderProperties/required'
-        409:
-          description: A order with ID {order_id} already exists
+                $ref: '#/components/schemas/OrderProperties'
+        500:
+          description: Error adding order
   /{order_id}:
+    parameters:
+      - $ref: '#/components/parameters/order_id'
     get:
-      operationId: orders_controller.get_order
       tags:
         - Orders
       summary: Fetches an order
-      parameters:
-        - $ref: '#/components/parameters/order_id'
       responses:
         200:
           description: Returns existing order
           content:
             application/json:
               schema:
-                allOf:
-                  - $ref: '#/components/schemas/OrderProperties'
-                  - $ref: '#/components/schemas/OrderProperties/required'
+                $ref: '#/components/schemas/OrderProperties'
         404: 
-          description: Order with ID {order_id} not found
-  /{order_id}/cancel:
-    put:
-      operationId: orders_controller.cancel_order
+          description: Order not found
+    delete:
       tags:
         - Orders
       summary: Updates an existing order based on the received data
-      parameters:
-        - $ref: '#/components/parameters/order_id'
       responses:
-        200:
+        204:
           description: Succesfully cancelled order
         409:
-          description: Order not cancellable
+          description: Order cannot be cancelled
   /{order_id}/products/:
+    parameters:
+      - $ref: '#/components/parameters/order_id'
     post:
-      operationId: orders_controller.add_product_to_order
+      operationId: app.controllers.orders_controller.add_product_to_order
       tags:
         - Orders
         - Products
       summary: Adds an existing product to an order
-      parameters:
-        - $ref: '#/components/parameters/order_id'
       requestBody:
-        description: Product details
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/OrderProduct'
+        $ref: '#/components/requestBodies/CreateOrderProduct'
       responses:
-        201:
+        204:
           description: Product added to order
-        404:
-          description: Order with ID {order_id} not found
+        500:
+          description: Error adding product to order
     put:
-      operationId: orders_controller.update_product_quantity
+      operationId: app.controllers.orders_controller.update_product_quantity
       tags: 
         - Orders
         - Products
       summary: Updates an order product quantity
-      parameters:
-        - $ref: '#/components/parameters/order_id'
       requestBody:
-        description: Product details
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/OrderProduct'
+        $ref: '#/components/requestBodies/CreateOrderProduct'
       responses:
         200:
           description: Updated product quantity
-        404: 
-          description: Product with ID {product_id} not found in order {order_id}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderProperties'
+        500: 
+          description: Error updating product in order
   /{order_id}/products/{product_id}:
     delete:
-      operationId: orders_controller.delete_product_from_order
+      operationId: app.controllers.orders_controller.delete_product_from_order
       tags: 
         - Orders
         - Products
@@ -109,10 +94,10 @@ paths:
         - $ref: '#/components/parameters/order_id'
         - $ref: '#/components/parameters/product_id'
       responses:
-        202:
-          description: Product {product_id} removed from order {order_id}
-        404:
-          description: Product with ID {product_id} not found in order {order_id}
+        204:
+          description: Product removed from order
+        500:
+          description: Error removing product from order
 
 components:
   parameters:
@@ -132,15 +117,20 @@ components:
         $ref: '#/components/schemas/id'
   requestBodies:
     CreateOrder:
-      description: Create a new order
+      description: Order details
       content:
         application/json:
           schema:
-            allOf:
-              - $ref: '#/components/schemas/OrderProperties'
-              - $ref: '#/components/schemas/OrderProperties/required'
+            $ref: '#/components/schemas/OrderProperties'
+    CreateOrderProduct:
+      description: OrderProduct details
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/OrderProduct'
   schemas:
     OrderProperties:
+      description: Order entity properties
       type: object
       properties:
         order_id:
@@ -148,9 +138,11 @@ components:
         customer_id:
           $ref: '#/components/schemas/id'
         date:
+          description: Order creation date
           type: string
           format: date-time
         status:
+          description: Order current status
           type: string
           enum:
             - cancelled
@@ -158,6 +150,7 @@ components:
             - shipped
             - completed
         products:
+          description: Order products
           type: array
           items:
             $ref: '#/components/schemas/OrderProduct'
@@ -167,16 +160,19 @@ components:
         - date
         - status
     OrderProduct:
+      description: OrderProduct entity properties
       type: object
       properties:
         product_id:
           $ref: '#/components/schemas/id'
         quantity:
+          description: Product order quantity
           type: integer
           format: int32
       required:
         - product_id
         - quantity
     id:
+      description: Reusable ID property schema
       type: integer
       format: int32
